// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Render all child components Fibonacci 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Fibonacci />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          id="formFibonacci"
          onSubmit={[Function]}
>
          <input
                    autoComplete="off"
                    className="input input-number"
                    id="fibonacciNum"
                    onChange={[Function]}
                    type="number"
                    value={2}
          />
          <button
                    className="btn btn-submit"
                    id="submit"
                    type="submit"
          >
                    Calculate
          </button>
          <button
                    className="btn btn-reset"
                    id="reset"
                    onClick={[Function]}
                    type="reset"
          >
                    Reset
          </button>
</form>,
        <div
          className="result"
          id="FibonacciNth"
/>,
      ],
      "className": "fibonacci",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              autoComplete="off"
              className="input input-number"
              id="fibonacciNum"
              onChange={[Function]}
              type="number"
              value={2}
/>,
            <button
              className="btn btn-submit"
              id="submit"
              type="submit"
>
              Calculate
</button>,
            <button
              className="btn btn-reset"
              id="reset"
              onClick={[Function]}
              type="reset"
>
              Reset
</button>,
          ],
          "id": "formFibonacci",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoComplete": "off",
              "className": "input input-number",
              "id": "fibonacciNum",
              "onChange": [Function],
              "type": "number",
              "value": 2,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Calculate",
              "className": "btn btn-submit",
              "id": "submit",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Calculate",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Reset",
              "className": "btn btn-reset",
              "id": "reset",
              "onClick": [Function],
              "type": "reset",
            },
            "ref": null,
            "rendered": "Reset",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": false,
          "className": "result",
          "id": "FibonacciNth",
        },
        "ref": null,
        "rendered": false,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            id="formFibonacci"
            onSubmit={[Function]}
>
            <input
                        autoComplete="off"
                        className="input input-number"
                        id="fibonacciNum"
                        onChange={[Function]}
                        type="number"
                        value={2}
            />
            <button
                        className="btn btn-submit"
                        id="submit"
                        type="submit"
            >
                        Calculate
            </button>
            <button
                        className="btn btn-reset"
                        id="reset"
                        onClick={[Function]}
                        type="reset"
            >
                        Reset
            </button>
</form>,
          <div
            className="result"
            id="FibonacciNth"
/>,
        ],
        "className": "fibonacci",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoComplete="off"
                className="input input-number"
                id="fibonacciNum"
                onChange={[Function]}
                type="number"
                value={2}
/>,
              <button
                className="btn btn-submit"
                id="submit"
                type="submit"
>
                Calculate
</button>,
              <button
                className="btn btn-reset"
                id="reset"
                onClick={[Function]}
                type="reset"
>
                Reset
</button>,
            ],
            "id": "formFibonacci",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoComplete": "off",
                "className": "input input-number",
                "id": "fibonacciNum",
                "onChange": [Function],
                "type": "number",
                "value": 2,
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Calculate",
                "className": "btn btn-submit",
                "id": "submit",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Calculate",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Reset",
                "className": "btn btn-reset",
                "id": "reset",
                "onClick": [Function],
                "type": "reset",
              },
              "ref": null,
              "rendered": "Reset",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": false,
            "className": "result",
            "id": "FibonacciNth",
          },
          "ref": null,
          "rendered": false,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App Render all child components Footer 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p
        className="credits"
>
        Created by 
        <a
                href="//guglielmo-turco.com"
                rel="noopener noreferrer"
                target="_blank"
        >
                Guglielmo Turco
        </a>
</p>,
      "className": "footer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Created by ",
          <a
            href="//guglielmo-turco.com"
            rel="noopener noreferrer"
            target="_blank"
>
            Guglielmo Turco
</a>,
        ],
        "className": "credits",
      },
      "ref": null,
      "rendered": Array [
        "Created by ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Guglielmo Turco",
            "href": "//guglielmo-turco.com",
            "rel": "noopener noreferrer",
            "target": "_blank",
          },
          "ref": null,
          "rendered": "Guglielmo Turco",
          "type": "a",
        },
      ],
      "type": "p",
    },
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p
          className="credits"
>
          Created by 
          <a
                    href="//guglielmo-turco.com"
                    rel="noopener noreferrer"
                    target="_blank"
          >
                    Guglielmo Turco
          </a>
</p>,
        "className": "footer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Created by ",
            <a
              href="//guglielmo-turco.com"
              rel="noopener noreferrer"
              target="_blank"
>
              Guglielmo Turco
</a>,
          ],
          "className": "credits",
        },
        "ref": null,
        "rendered": Array [
          "Created by ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Guglielmo Turco",
              "href": "//guglielmo-turco.com",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "Guglielmo Turco",
            "type": "a",
          },
        ],
        "type": "p",
      },
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App Render all child components Header 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1
        className="title"
>
        Fibonacci Calculator
</h1>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Fibonacci Calculator",
        "className": "title",
      },
      "ref": null,
      "rendered": "Fibonacci Calculator",
      "type": "h1",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1
          className="title"
>
          Fibonacci Calculator
</h1>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Fibonacci Calculator",
          "className": "title",
        },
        "ref": null,
        "rendered": "Fibonacci Calculator",
        "type": "h1",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Header />,
        <Fibonacci />,
        <Footer />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Header />,
          <Fibonacci />,
          <Footer />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
